<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="english_ime_name">Scandinavian keyboard</string>
    <string name="english_ime_settings">Scandinavian keyboard settings</string>
    <string name="app_info_enable">To use Scandinavian keyboard, you first need to enable it, and then choose to use it. If you are just updating, and were using it before, you don\'t need to do this again.\n\nTo enable it, either press the button below or go to Settings -> Language &amp; keyboard. There you need to check Scandinavian keyboard if it\'s not checked.</string>
    <string name="app_info_enable_button">Press here to go there</string>
    <string name="app_info_choose">To choose the keyboard, either press the button below or go to a text field, press and hold it and select Input Method. Then select Scandinavian keyboard.</string>
    <string name="app_info_choose_button">Press here to choose</string>
    <string name="app_info_tips">To choose keyboard layout or change other settings, press and hold the ?123-button.\n\nTips:\nPress the back-button on your device to close the keyboard.\nLongpress the leftmost suggestion word to add it to the dictionary.\nIf multitouch stops working, try rebooting your phone. (This is probably a problem with HTC Sense, so I don\'t think I can fix it.)\n\nIf you have any problems, questions or requests, please contact me at trygveaa@gmail.com or http://code.google.com/p/scandinavian-keyboard/issues/</string>
    <string name="input_method">Input Method</string>
    <string name="help">Help &amp; about</string>
    <string name="homepage">Homepage</string>
    <string name="donate">Donate</string>
    <string name="close">Close</string>
    <string name="keyboard_type">Keyboard type</string>
    <string name="vibrate_options">Vibrate options</string>
    <string name="save">Save</string>
    <string name="vibrate_enable">Enable vibrate on keypress</string>
    <string name="vibrate_duration">Vibrate duration: </string>
    <string name="vibrate_bug_fix">Try to fix bug with endless vibration. If you don\'t experience this bug, you don\'t need to check this.</string>
    <string name="sound_on_keypress">Sound on keypress</string>
    <string name="swipe_settings">Swipe settings</string>
    <string name="swipe_settings_summary">Choose what to do when you swipe</string>
    <string name="enable_swipe">Enable swipe</string>
    <string name="enable_swipe_summary">Move finger quickly across the keyboard to swipe</string>
    <string name="swipe_up">Swipe up</string>
    <string name="swipe_down">Swipe down</string>
    <string name="swipe_left">Swipe left</string>
    <string name="swipe_right">Swipe right</string>
    <string name="swipe_up_default">1</string>
    <string name="swipe_down_default">2</string>
    <string name="swipe_left_default">3</string>
    <string name="swipe_right_default">4</string>
    <string name="swipe_keyboard_layout">Keyboard layouts to swipe between</string>
    <string name="swipe_dictionary">Dictionaries to swipe between</string>
    <string name="skin">Skin</string>
    <string name="skin_summary">Change the appearance of the keyboard</string>
    <string name="keyboard_layout">Keyboard layout</string>
    <string name="language_category">Language settings</string>
    <string name="dictionary_manually">Choose dictionary</string>
    <string name="dictionary_manually_summary_unchecked">Dictionary language is same as layout</string>
    <string name="dictionary_manually_summary_checked">Dictionary language is set manually</string>
    <string name="dictionary">Dictionary language</string>
    <string name="dictionary_builtin_language">English</string>
    <string name="dictionary_market">Download dictionary</string>
    <string name="auto_dictionary_options">Auto dictionary options</string>
    <string name="auto_dictionary_options_summary">Automatically saves often used words in user dictionary</string>
    <string name="auto_dictionary_enable">Enable auto dictionary</string>
    <string name="auto_dictionary_limit_text">How many times to type a word before it is added to the user dictionary</string>
    <string name="auto_dictionary_case_sensitive">Case-sensitive</string>
    <string name="space_after_prediction">Insert space</string>
    <string name="space_after_prediction_summary">Insert space after a predicted word is selected</string>
    <string name="at_is_word_separator">Use \@ as a word separator</string>
    <string name="at_is_word_separator_summary_unchecked">\@ can be saved in a word</string>
    <string name="at_is_word_separator_summary_checked">\@ will complete suggested word and can\'t be saved in a word</string>
    <string name="swap_colon">Swap colon and space</string>
    <string name="swap_colon_summary">When colon/semicolon is pressed after space, place it before</string>
    <string name="hit_correction">Correct typing errors</string>
    <string name="hit_correction_summary">Enable input error correction</string>
    <string name="hit_correction_land">Landscape input errors</string>
    <string name="hit_correction_land_summary">Enable input error correction</string>
    <string name="auto_correction">Word suggestions</string>
    <string name="auto_correction_summary">Automatically correct the previous word</string>
    <string name="prediction">Word suggestions</string>
    <string name="prediction_category">Word suggestion settings</string>
    <string name="prediction_summary">Enable auto completion while typing</string>
    <string name="auto_complete_dialog_title">Auto completion</string>
    <string name="prediction_landscape">Increase text field size</string>
    <string name="prediction_landscape_summary">Hide word suggestions in landscape view</string>
    <string name="auto_cap">Auto-capitalization</string>
    <string name="auto_cap_summary">Capitalize the start of a sentence</string>
    <string name="auto_punctuate">Auto-punctuate</string>
    <string name="auto_punctuate_summary"></string>
    <string name="quick_fixes">Quick fixes</string>
    <string name="quick_fixes_summary">Corrects commonly typed mistakes</string>
    <string name="show_suggestions">Show suggestions</string>
    <string name="show_suggestions_summary">Display suggested words while typing</string>
    <string name="auto_complete">Auto-complete</string>
    <string name="auto_complete_summary">Spacebar and punctuation automatically insert highlighted word</string>
    <string-array name="prediction_modes">
        <item>None</item>
        <item>Basic</item>
        <item>Advanced</item>
    </string-array>
    <string name="prediction_none" >0</string>
    <string name="prediction_basic">1</string>
    <string name="prediction_full" >2</string>
    <string-array name="prediction_modes_values">
        <item>@string/prediction_none</item>
        <item>@string/prediction_basic</item>
        <item>@string/prediction_full</item>
    </string-array>
    <string name="added_word"><xliff:g id="word">%s</xliff:g> : Saved</string>
    <string name="key_i">i</string>
    <string name="tip_long_press">Hold a key down to see accents (ø, ö, etc.)</string>
    <string name="tip_dismiss">Press the back key \u21B6 to close the keyboard at any point</string>
    <string name="tip_access_symbols">Access numbers and symbols</string>
    <string name="tip_add_to_dictionary">Press and hold the left-most word to add it to the dictionary
        </string>
    <string name="touch_to_continue">Touch this hint to continue »</string>
    <string name="touch_to_finish">Touch here to close this hint and start typing!</string>
    <string name="tip_to_open_keyboard"><b>The keyboard opens any time you touch a text field</b></string>
    <string name="tip_to_view_accents"><b>Touch &amp; hold a key to view accents\n(ø, ö, ô, ó, and so on)</b>
    </string>
    <string name="tip_to_open_symbols"><b>Switch to numbers and symbols by touching this key</b></string>
    <string name="tip_to_close_symbols"><b>Go back to letters by touching this key again</b></string>
    <string name="tip_to_launch_settings"><b>Touch &amp; hold this key to change keyboard settings, like auto complete</b></string>
    <string name="tip_to_start_typing"><b>Try it!</b></string>
    <string name="label_go_key">Go</string>
    <string name="label_next_key">Next</string>
    <string name="label_done_key">Done</string>
    <string name="label_send_key">Send</string>
    <string name="label_symbol_key">\?123</string>
    <string name="label_phone_key">123</string>
    <string name="label_alpha_key">ABC</string>
    <string name="label_alt_key">ALT</string>
    <string name="open_the_keyboard"><font size="17"><b>Open the keyboard\n</b></font><font size="3">\n</font>Touch any text field.</string>
    <string name="close_the_keyboard"><font size="17"><b>Close the keyboard\n</b></font><font size="3">\n</font>Press the Back key.</string>
    <string name="touch_and_hold"><font size="17"><b>Touch \u0026 hold a key for options\n</b></font><font size="3">\n</font>Access punctuation and accents.</string>
    <string name="keyboard_settings"><font size="17"><b>Keyboard settings\n</b></font><font size="3">\n</font>Touch \u0026 hold the <b>\?123\</b> key.</string>
    <string name="popular_domain_0">".com"</string>
    <string name="popular_domain_1">".net"</string>
    <string name="popular_domain_2">".org"</string>
    <string name="popular_domain_3">".gov"</string>
    <string name="popular_domain_4">".edu"</string>
    <string name="popular_domain_5">".dk"</string>
    <string name="popular_domain_6">".no"</string>
    <string name="popular_domain_7">".se"</string>
    <string name="popular_domain_8">".fi"</string>
    <string name="popular_domain_9">".is"</string>
    <string name="popular_domain_10">".de"</string>
    <string name="popular_domain_11">".lv"</string>
    <string name="popular_domain_12">".fo"</string>
    <string name="user_dict_settings_title">User dictionary</string>
</resources>