<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2008 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
  
          http://www.apache.org/licenses/LICENSE-2.0
  
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
        android:title="@string/english_ime_settings"
        android:key="english_ime_settings">

    <Preference
            android:key="help"
            android:title="@string/help"
            />

    <Preference
            android:key="vibrate_options"
            android:title="@string/vibrate_options"
            />

    <CheckBoxPreference
            android:key="sound_on"
            android:title="@string/sound_on_keypress"
            android:persistent="true" 
            />

    <CheckBoxPreference
            android:key="auto_cap"
            android:title="@string/auto_cap"
            android:persistent="true"
            android:defaultValue="true"
            />

    <PreferenceScreen 
            android:title="@string/swipe_settings"
            android:summary="@string/swipe_settings_summary">

        <PreferenceCategory
                android:title="@string/swipe_settings"
                android:key="swipe_settings">
    
            <CheckBoxPreference
                android:key="swipe_enabled"
                android:title="@string/enable_swipe"
                android:summary="@string/enable_swipe_summary"
                android:persistent="true"
                android:defaultValue="true"
                />
    
            <ListPreference
                android:key="swipe_up"
                android:title="@string/swipe_up"
                android:entries="@array/swipe_options"
                android:entryValues="@array/swipe_options_values"
                android:persistent="true"
                android:defaultValue="@string/swipe_up_default"
                android:dependency="swipe_enabled"
                />
    
            <ListPreference
                android:key="swipe_down"
                android:title="@string/swipe_down"
                android:entries="@array/swipe_options"
                android:entryValues="@array/swipe_options_values"
                android:persistent="true"
                android:defaultValue="@string/swipe_down_default"
                android:dependency="swipe_enabled"
                />
    
            <ListPreference
                android:key="swipe_left"
                android:title="@string/swipe_left"
                android:entries="@array/swipe_options"
                android:entryValues="@array/swipe_options_values"
                android:persistent="true"
                android:defaultValue="@string/swipe_left_default"
                android:dependency="swipe_enabled"
                />
    
            <ListPreference
                android:key="swipe_right"
                android:title="@string/swipe_right"
                android:entries="@array/swipe_options"
                android:entryValues="@array/swipe_options_values"
                android:persistent="true"
                android:defaultValue="@string/swipe_right_default"
                android:dependency="swipe_enabled"
                />

	        <com.android.inputmethod.norwegian.ListPreferenceMultiSelect
	            android:key="swipe_keyboard_layout"
	            android:title="@string/swipe_keyboard_layout"
	            android:entries="@array/keyboard_layouts"
	            android:entryValues="@array/keyboard_layouts_values"
	            android:persistent="true"
	            android:defaultValue="#ALL#"
	            android:dependency="swipe_enabled"
	            />

	        <com.android.inputmethod.norwegian.ListPreferenceMultiSelect
	            android:key="swipe_dictionary"
	            android:title="@string/swipe_dictionary"
	            android:entries="@array/keyboard_layouts"
	            android:entryValues="@array/keyboard_layouts_values"
	            android:persistent="true"
                android:defaultValue="#ALL#"
                android:dependency="swipe_enabled"
	            />

        </PreferenceCategory>
    </PreferenceScreen>

    <ListPreference
        android:key="skin"
        android:title="@string/skin"
        android:summary="@string/skin_summary"
        android:entries="@array/skin_entries"
        android:entryValues="@array/skin_values"
        android:persistent="true"
        android:defaultValue="@string/preferences_skin_default_value"
        />

    <PreferenceCategory
            android:title="@string/language_category"
            android:key="language_settings">

        <ListPreference
            android:key="keyboard_layout"
            android:title="@string/keyboard_layout"
            android:entries="@array/keyboard_layouts"
            android:entryValues="@array/keyboard_layouts_values"
            android:persistent="true"
            android:defaultValue="@string/preferences_keyboard_layout_list_default_value"
            />

        <CheckBoxPreference
            android:key="dictionary_manually"
            android:title="@string/dictionary_manually"
            android:summaryOff="@string/dictionary_manually_summary_unchecked"
            android:summaryOn="@string/dictionary_manually_summary_checked"
            android:persistent="true"
            android:defaultValue="false"
            />

        <ListPreference
            android:key="dictionary"
            android:title="@string/dictionary"
            android:entries="@array/keyboard_layouts"
            android:entryValues="@array/keyboard_layouts_values"
            android:persistent="true"
            android:defaultValue="@string/preferences_keyboard_layout_list_default_value"
            android:dependency="dictionary_manually"
            />

        <Preference
            android:key="dictionary_market"
            android:title="@string/dictionary_market"
            />

    </PreferenceCategory>

    <PreferenceCategory
            android:title="@string/prediction_category"
            android:key="prediction_settings">

        <PreferenceScreen 
                android:title="@string/user_dict_settings_title" 
                android:summary="">
            <intent android:action="android.intent.action.MAIN"
                    android:targetPackage="com.android.inputmethod.norwegian"
                    android:targetClass="com.android.inputmethod.norwegian.UserDictionarySettings" />
        </PreferenceScreen>

        <CheckBoxPreference
            android:key="quick_fixes"
            android:title="@string/quick_fixes"
            android:summary="@string/quick_fixes_summary"
            android:persistent="true"
            android:defaultValue="false"
            />

        <CheckBoxPreference
            android:key="show_suggestions"
            android:title="@string/show_suggestions"
            android:summary="@string/show_suggestions_summary"
            android:persistent="true"
            android:defaultValue="true"
            />

        <CheckBoxPreference
            android:key="auto_complete"
            android:title="@string/auto_complete"
            android:summary="@string/auto_complete_summary"
            android:persistent="true" 
            android:defaultValue="@bool/enable_autocorrect"
            android:dependency="show_suggestions"
            />

        <Preference
            android:key="auto_dictionary_options"
            android:title="@string/auto_dictionary_options"
            android:summary="@string/auto_dictionary_options_summary"
            android:dependency="show_suggestions"
            />

        <CheckBoxPreference
            android:key="space_after_prediction"
            android:title="@string/space_after_prediction"
            android:summary="@string/space_after_prediction_summary"
            android:persistent="true"
            android:defaultValue="true"
            android:dependency="show_suggestions"
            />

        <CheckBoxPreference
            android:key="at_is_word_separator"
            android:title="@string/at_is_word_separator"
            android:summaryOff="@string/at_is_word_separator_summary_unchecked"
            android:summaryOn="@string/at_is_word_separator_summary_checked"
            android:persistent="true"
            android:defaultValue="true"
            android:dependency="show_suggestions"
            />

        <CheckBoxPreference
            android:key="swap_colon"
            android:title="@string/swap_colon"
            android:summary="@string/swap_colon_summary"
            android:persistent="true"
            android:defaultValue="true"
            />

    </PreferenceCategory>
</PreferenceScreen>